1. User screen resolution issue resolved, 2. I Agree button is not visible for some laptop resolution, Bug #38663, #38167

--- a/app/src/pages/login/styles/WelcomeWizard.scss
+++ b/app/src/pages/login/styles/WelcomeWizard.scss
@@ -18,7 +18,7 @@
 .WW_container{
     background: #faf9f859;
     display: flex;
-    height: 100%;
+    height: 90%;
     width: 100%;
     z-index: 100;
     position: fixed;
